--- a/shellscript/Vagrantfile
+++ b/shellscript/Vagrantfile
@@ -1,8 +1,9 @@
 # Vagrantfile
-K8S_IP_NW = "192.168.10."
+K8S_IP_NW = "192.168.56."
 M_IP_START = 40
 W_IP_START = 50
 k8master_hostname="k8smaster01"
+SHELL_FILE_PATH = "../shellscript/deploy_ngx_metlb.sh"
 
 Vagrant.configure("2") do |config|
   # Use the ubuntu/jammy64 base box
@@ -13,12 +14,12 @@ Vagrant.configure("2") do |config|
   end
   # Configure VM resources
   config.vm.provider "virtualbox" do |vb|
-    vb.memory = "1024"      # Set memory to 1 GB
-    vb.cpus = 2            # Set CPU count to 2
+    vb.memory = "4096"      # Set memory to 1 GB
+    vb.cpus = 6            # Set CPU count to 2
   end
 
   # Provisioning script (optional)
-  config.vm.provision "file", source: "../shellscript/custum_k8s_manage.sh", destination: "/tmp/custum_k8s_manage.sh"
+  config.vm.provision "file", source: SHELL_FILE_PATH, destination: "/tmp/run_me_shell.sh"
   config.vm.provision "shell", inline: <<-SHELL
     # Install utilities and run the Kubernetes management script
 	sudo rm -f /etc/machine-id /var/lib/dbus/machine-id
@@ -28,7 +29,7 @@ Vagrant.configure("2") do |config|
 	sudo sed -i '/ubuntu/d' /etc/hosts  &>/dev/null
 	sudo apt-get update
     sudo apt-get install -y dos2unix net-tools
-    sudo dos2unix /tmp/custum_k8s_manage.sh
-	bash -x /tmp/custum_k8s_manage.sh
+    sudo dos2unix /tmp/run_me_shell.sh
+	bash -x /tmp/run_me_shell.sh
   SHELL
 end
