--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -33,11 +33,13 @@ Vagrant.configure("2") do |config|
 	  echo 'sudo systemctl restart kubelet' >> /vagrant/K8SCLUSTERJOINCMD_FILE.sh
 	  echo '####' >> /vagrant/K8SCLUSTERJOINCMD_FILE.sh
 	  echo 'sudo su - "vagrant" -c  "mkdir -p /home/$USERMR/.kube"' >> /vagrant/K8SCLUSTERJOINCMD_FILE.sh
+	  echo '####' >> /vagrant/K8SCLUSTERJOINCMD_FILE.sh
       export KUBECONFIG=/etc/kubernetes/admin.conf && sudo kubeadm token create --print-join-command >> /vagrant/K8SCLUSTERJOINCMD_FILE.sh
 	  echo '####' >> /vagrant/K8SCLUSTERJOINCMD_FILE.sh
 	  echo 'cat <<EOFKK > /home/vagrant/.kube/config' >> /vagrant/K8SCLUSTERJOINCMD_FILE.sh
 	  sudo  cat /etc/kubernetes/admin.conf >> /vagrant/K8SCLUSTERJOINCMD_FILE.sh
 	  echo 'EOFKK' >> /vagrant/K8SCLUSTERJOINCMD_FILE.sh
+	  echo '####' >> /vagrant/K8SCLUSTERJOINCMD_FILE.sh
 	  echo 'sudo chown vagrant:vagrant /home/vagrant/.kube/config'  >> /vagrant/K8SCLUSTERJOINCMD_FILE.sh
 	  echo '####' >> /vagrant/K8SCLUSTERJOINCMD_FILE.sh
     SHELL
